<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ibta.aluno.mediaplayer.MainActivity">

    <Button
        android:onClick="dog"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_dog"
        android:id="@+id/btnDog" />

        <Button
            android:onClick="cat"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_cat"
            android:id="@+id/btnCat" />

        <Button
            android:onClick="horse"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_horse"
            android:id="@+id/btnHorse" />

        <Button
            android:onClick="cow"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_cow"
            android:id="@+id/btnCow" />

        <Button
            android:onClick="pig"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_pig"
            android:id="@+id/btnPig" />

        <Button
            android:onClick="rooster"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_rooster"
            android:id="@+id/btnRooster" />

        <Button
            android:onClick="lion"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_lion"
            android:id="@+id/btnLion" />

        <Button
            android:onClick="turkey"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_turkey"
            android:id="@+id/btnTurkey" />

</LinearLayout>
